# project-awful

./: .gitignore  LICENSE  README.md
doc/: structure.md
doc/devs/: jacorn.md  scawful.md
src/: CMakeLists.txt  Game.cpp  Game.hpp  awful.cpp  core.hpp
src/Actor/: Actor.cpp  Actor.hpp  Enemy.cpp  Enemy.hpp  Player.cpp  Player.hpp
src/Ancilla/: Ancilla.cpp  Ancilla.hpp  Sword.cpp  Sword.hpp
src/Components/: AnimationComponent.cpp  AnimationComponent.hpp  HitboxComponent.cpp  HitboxComponent.hpp  HitboxManager.cpp  HitboxManager.hpp  MovementComponent.cpp  MovementComponent.hpp
src/Dungeon/: Dungeon.cpp  Dungeon.hpp  DungeonGenerator.cpp  DungeonGenerator.hpp  Room.cpp  Room.hpp  Subdungeon.cpp  Subdungeon.hpp
src/GUI/: Button.cpp  Button.hpp  DropDown.cpp  DropDown.hpp  Text.cpp  Text.hpp  Textbox.cpp  Textbox.hpp
src/State/: CharacterState.cpp  CharacterState.hpp  GameState.cpp  GameState.hpp  MainMenuState.cpp  MainMenuState.hpp  SettingsState.cpp  SettingsState.hpp  State.cpp  State.hpp
src/World/: Overworld.cpp  Overworld.hpp  Underworld.cpp  Underworld.hpp  World.cpp  World.hpp
